feat: #1375 applied PR review recommendations (Thomas M.)
